fix: Update imageWrapper overflow css property

--- a/sass/components/stylist-grid-view.module.scss
+++ b/sass/components/stylist-grid-view.module.scss
@@ -20,6 +20,7 @@
 .imageWrapper {
     border-radius: 6px;
     height: 198px;
+    overflow: hidden;
 }
 
 .stylist {
